--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <ol>
         <li class="item"><a href="#home">Home</a></li>
-        <li class="item"><a href="#service-container">service</a></li>
+        <li class="item"><a href="./service-container">service</a></li>
         <li class="item"><a href="#client-section">Client</a></li>
         <li class="item"><a href="#contact">Contact us</a></li>
       
